--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -4,15 +4,6 @@
   0% {
     opacity: 0;
   }
-  25% {
-    opacity: 0.3;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  75% {
-    opacity: 0.7;
-  }
   100% {
     opacity: 1;
   }
@@ -190,7 +181,7 @@
 .slide-7 {
   transform: translateX(-150%);
   opacity:1;
-  animation: toRight 2s 3s ease-in-out;
+  animation: toRight 2s 4s ease-in-out;
   animation-fill-mode:forwards;
   z-index: 1;
   width: 100%;
@@ -204,7 +195,7 @@
   transform: translateY(-250%);
   left: 690px;
   opacity:1;
-  animation: toBottom 2s 3s ease-in-out;
+  animation: toBottom 2s 5s ease-in-out;
   animation-fill-mode:forwards;
 }
 .slide-8 img {
@@ -212,11 +203,11 @@
   height: 300px;
 }
 .slide-9 { 
-  transform: translateY(-250%);
+  transform: translateY(-370%);
   top: 80px;
   left: 100px;
   opacity:1;
-  animation: toBottom 3s 3s ease-in-out;
+  animation: toBottom 1s 6s ease-in-out;
   animation-fill-mode:forwards;
   z-index:1000;
   width:80%;
@@ -246,19 +237,19 @@
   border-radius: 50%;
   margin: 20px;
   display: inline-block;
-  background: #00f7a5;
-  box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+  background: $light-4;
+  box-shadow: 0px 4.66667px 24px 3px $light-4;
   animation: flash-1 2s infinite;
 }
 .lightrope li:nth-child(2n+1) {
-  background: cyan;
-  box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.5);
+  background: $light-1;
+  box-shadow: 0px 4.66667px 24px 3px $light-1;
   animation: flash-2 0.4s infinite;
 }
 
 .lightrope li:nth-child(4n+2) {
-  background: #f70094;
-  box-shadow: 0px 4.66667px 24px 3px #f70094;
+  background:$color-4;
+  box-shadow: 0px 4.66667px 24px 3px $color-4;
   animation: flash-3 1.1s infinite;
 }
 
@@ -301,33 +292,33 @@
 
 @keyframes flash-1 {
   0%, 100% {
-    background: #00f7a5;
-    box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+    background: $light-4;
+    box-shadow: 0px 4.66667px 24px 3px $light-4;
   }
   50% {
-    background: rgba(0, 247, 165, 0.4);
-    box-shadow: 0px 4.66667px 24px 3px rgba(0, 247, 165, 0.2);
+    background: $light-5;
+    box-shadow: 0px 4.66667px 24px 3px $light-5;
   }
 }
 
   @keyframes flash-2 {
     0%, 100% {
-      background: cyan;
-      box-shadow: 0px 4.66667px 24px 3px cyan;
+      background: $light-1;
+      box-shadow: 0px 4.66667px 24px 3px $light-1;
     }
     50% {
-      background: rgba(0, 255, 255, 0.4);
-      box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.2);
+      background: $light-2;
+      box-shadow: 0px 4.66667px 24px 3px $light-2;
     }
   }
   @keyframes flash-3 {
     0%, 100% {
-      background: #c5062f;
-      box-shadow: 0px 4.66667px 24px 3px rgb(211, 4, 73), 0, 33;
+      background: $color-4;
+      box-shadow: 0px 4.66667px 24px 3px $color-4;
     }
     50% {
-      background: rgba(247, 0, 148, 0.4);
-      box-shadow: 0px 4.66667px 24px 3px rgba(247, 0, 148, 0.2);
+      background: $light-3;
+      box-shadow: 0px 4.66667px 24px 3px $light-3;
     }
   }
   
